--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -22,3 +22,10 @@ jobs:
               uses: actions/checkout@v4
             - name: Test Project
               run: echo "running tests......"
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+            - name: Deploy Project
+              run: echo "Deploying the project....."
