--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,24 +8,24 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-              name: Build Project
-              run: echo "Buiding the project....."
+            - name: build project
+              run: echo "Building the project...."
     test:
         runs-on: ubuntu-latest
         needs: build
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Test Project
-              run: echo "running tests......"
+            - name: test project
+              run: echo "running tests....."
     deploy:
         runs-on: ubuntu-latest
+        needs: test
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Deploy Project
-              run: echo "Deploying the project....."
+            - name: deploy project
+              run: echo "Deploying the project...."
